[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tennis-kata"
version = "0.0.1"
package-mode = false

[tool.poetry.dependencies]
pytest = "*"
ruff = ">=0.5.7"
python = "~3.11.9"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
    "E741",  # single-letter variable
    "PLR2004",  # magic values
]

